2009-01-05 optional use of preview.sty in usetex mode. - JJL

2009-01-02 Allow multipage pdf files. - JKS

2008-12-31 Improve pdf usetex by adding support for font effects
           (slanting and extending). - JKS

2008-12-29 Fix a bug in pdf usetex support, which occurred if the same
           Type-1 font was used with different encodings, e.g. with
           Minion Pro and MnSymbol. - JKS

2008-12-20 fix the dpi-dependent offset of Shadow. - JJL

2008-12-20 fix the hatch bug in the pdf backend. minor update
           in docs and  example - JJL

2008-12-19 Add axes_locator attribute in Axes. Two examples are added.
           - JJL

2008-12-19 Update Axes.legend documnetation. /api/api_changes.rst is also
           updated to describe chages in keyword parameters.
           Issue a warning if old keyword parameters are used. - JJL

2008-12-18 add new arrow style, a line + filled triangles. -JJL

==================================================================
2008-12-18 Re-Released 0.98.5.2 from v0_98_5_maint at r6679
           Released 0.98.5.2 from v0_98_5_maint at r6667

2008-12-18 Removed configobj, experimental traits and doc/mpl_data link - JDH

2008-12-18 Fix bug where a line with NULL data limits prevents
           subsequent data limits from calculating correctly - MGD

2008-12-17 Major documentation generator changes - MGD

2008-12-17 Applied macosx backend patch with support for path
           collections, quadmesh, etc... - JDH

2008-12-17 fix dpi-dependent behavior of text bbox and arrow in annotate
            -JJL

2008-12-17 Add group id support in artist. Two examples which
           demostrate svg filter are added. -JJL

2008-12-16 Another attempt to fix dpi-dependent behavior of Legend. -JJL

2008-12-16 Fixed dpi-dependent behavior of Legend and fancybox in Text.

2008-12-16 Added markevery property to Line2D to support subsampling
           of markers - JDH
2008-12-15 Removed mpl_data symlink in docs.  On platforms that do not